# rosproject

./: README.md
catkin_ws/: run.sh
catkin_ws/src/base_control/: CMakeLists.txt  package.xml
catkin_ws/src/base_control/config/: base.yaml
catkin_ws/src/base_control/include/: base_controller.h  cmd_processing.h  crc.h  data_type.h  odometry.h
catkin_ws/src/base_control/include/imu/: imu_data_decode.h  packet.h
catkin_ws/src/base_control/launch/: base.launch
catkin_ws/src/base_control/src/: base_controller.cpp  odometry.cpp  serial_port_read.cpp
catkin_ws/src/base_control/src/imu/: imu_data_decode.c  packet.c
catkin_ws/src/clear_costmap_recovery2/: CMakeLists.txt  CMakeLists.txt~  ccr_plugin.xml  package.xml
catkin_ws/src/clear_costmap_recovery2/include/clear_costmap_recovery2/: clear_costmap_recovery2.h
catkin_ws/src/clear_costmap_recovery2/src/: clear_costmap_recovery2.cpp
catkin_ws/src/nav/: CMakeLists.txt  CMakeLists.txt~  package.xml
catkin_ws/src/nav/bringup/config/: laser_filter.yaml
catkin_ws/src/nav/bringup/launch/: 2dsensor.launch  fake_hqrobot.launch  ls.launch  me.launch  mm.launch  my.launch  my_2dlaser.launch  mylaser.launch  rp.launch  rp_lidar.launch  sick.launch  sick_tim551.launch  sick_tim551.launch~  sick_tim551_2050001.launch
catkin_ws/src/nav/bringup/param/: mux.yaml
catkin_ws/src/nav/config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  nav_goal.yaml
catkin_ws/src/nav/launch/: amcl_demo.launch  amcl_dwa.launch  amcl_dwa.launch~  base_start_gmapping.sh  base_start_navigation.sh  elec_map.launch  fake_amcl.launch  fake_amcl_dwa.launch  fake_nav_base.launch  gmapping_demo.launch  karto_slam_demo.launch  nav_goal.launch  odom_imu_ekf.launch  run.launch  topicrelay.sh  topicrelay_test.sh
catkin_ws/src/nav/maps/: company01.pgm  company01.yaml  company03.pgm  company03.yaml  company04.pgm  company04.yaml  elec_company01.pgm  elec_map.config  ferly.pgm  ferly.yaml  ferly01.pgm  ferly01.yaml  ferly_1117.pgm  ferly_1117.yaml  icbc05.pgm  icbc05.yaml  lab0719map.pgm  lab0719map.yaml  lab072001map.pgm  lab0720map.pgm  lab0720map.yaml  lab2map.pgm  lab2map.yaml  lab3map.pgm  lab3map.yaml  labmap.pgm  labmap.yaml  map.config  maps.yaml  skmap.pgm  skmap.yaml  skmap_h.pgm  skmap_h.yaml
catkin_ws/src/nav/msg/: navinfo.msg  robotStatus.msg  targetpos.msg  targetpos_list.msg
catkin_ws/src/nav/scripts/: di.py
catkin_ws/src/nav/src/: BmpWriter.h  nav_info_publish.cpp  nav_map.cpp  navigation_goals.cpp
catkin_ws/src/nav/srv/: bitmap.srv
catkin_ws/src/yocs_velocity_smoother/launch/: standalone.launch  standalone.launch~  velocity_smoother.launch
catkin_ws/src/yocs_velocity_smoother/param/: standalone.yaml~
(+20 files in other folders)
