<package>
  <name>base_control</name>
  <version>0.14.3</version>
  <description>Controller for a differential drive mobile base.</description>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/ros-controls/ros_controllers/wiki</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_controllers/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_controllers</url>
  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author>
  <buildtool_depend>catkin</buildtool_depend>
    <build_depend>bullet</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sdl</build_depend>
    <build_depend>sdl-image</build_depend>
    <build_depend>tf2</build_depend>


    <run_depend>nav_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sdl</run_depend>
    <run_depend>sdl-image</run_depend>
    <run_depend>tf2</run_depend>
    <run_depend>yaml-cpp</run_depend>

    <test_depend>rospy</test_depend>
    <test_depend>rostest</test_depend>
    <test_depend>rosunit</test_depend>
  <test_depend>controller_manager</test_depend>

  <test_depend>std_srvs</test_depend>
</package>
